@@ -50,9 +50,9 @@ copyright = u'2013, Christian Winther (Andersson) and Claus Führer'
 # built documents.
 #
 # The short X.Y version.
-version = '3.5.0'
+version = '3.5.1'
 # The full version, including alpha/beta/rc tags.
-release = '3.5.0'
+release = '3.5.1'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
